# openvr-hs

./: .gitignore  README.md  copyLibLinux.sh  copyLibMac.sh  copyLibWin.sh  openvr-hs.cabal  openvr_capi.h  openvr_capi.h.diff  stack.yaml  vr-pal.cabal
app/: Cube.hs  CubeUniforms.hs  Framebuffer.hs  Main.hs  MainI.hs  MainPerEye.hs  Minimal.hs  TestCPP.hs  cube.frag  cube.vert  cubeI.frag  cubeI.vert
cbits/: Why.txt  openvr_capi_helper.c  openvr_capi_helper.cpp  openvr_capi_helper.h  openvr_capi_missing.h  openvr_mingw.h
openvr-linking-tests/: buildTest.sh  buildTestC.sh  buildTestCFnTable.sh  buildTestCPP.sh  buildTestSDL.sh  test.cpp  testC.c  testCFnTable.c  testCPP.cpp  testSDL.cpp
src/Graphics/VR/: OpenVR.hs
