name:                openvr-hs
version:             0.1.0.0
synopsis:            Bindings for OpenVR and the Valve/HTC Vive
description:         Please see README.md
homepage:            http://github.com/lukexi/openvr-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           2015 Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.VR.OpenVR
  build-depends:       base >= 4.7 && < 5
                     , inline-c >= 0.5.4.3
                     , inline-c-cpp
                     , linear-extra
                     , mtl
                     , gl-pal
                     , raw-strings-qq
                     , vector
  default-language:    Haskell2010
  include-dirs:        openvr/headers, cbits
  c-sources:           src/Graphics/VR/OpenVR.cpp
                       cbits/openvr_capi_helper.c
  extra-libraries:     openvr_api
  ghc-options:         -Wall -O2
  ghc-prof-options:    -Wall -O2 -fprof-auto
  cc-options:          -O2 -std=c++11
  if os(windows)
    extra-libraries:   libstdc++-6
    -- We store openvr_api.dll in /usr/local/bin
    extra-lib-dirs:    c:\msys64\usr\local\bin
    cc-options:        -fno-exceptions -std=c++0x

test-suite minimal
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app
  main-is:             Minimal.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , halive
                     , openvr-hs
                     , gl-pal
                     , glfw-pal
                     , linear-extra
                     , lens-extra
                     , mtl
                     , time
  default-language:    Haskell2010

test-suite cubes
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , halive
                     , openvr-hs
                     , gl-pal
                     , glfw-pal
                     , linear-extra
                     , lens-extra
                     , mtl
                     , time
  default-language:    Haskell2010
  other-modules:       Cube
                       CubeUniforms

-- Needs to be an executable to profile it
-- (must comment out "type:" field)
-- executable cubes-instanced
test-suite cubes-instanced
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app
  main-is:             MainI.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts "-with-rtsopts=-N -H512M -A4M"
  -- ghc-prof-options:    -O2 -Wall -threaded -rtsopts -prof -fprof-auto "-with-rtsopts=-N -T -p -S -H512M -A4M -L100"
  build-depends:       base
                     , halive
                     , openvr-hs
                     , gl-pal
                     , glfw-pal
                     , linear-extra
                     , lens-extra
                     , mtl
                     , time
                     , vector
                     , clock
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/openvr-hs
