name:                vr-pal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/vr-pal#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.VR.OpenVR
  build-depends:       base >= 4.7 && < 5
                     , inline-c >= 0.5.4.3
                     , inline-c-cpp
                     , linear-extra
                     , mtl
                     , raw-strings-qq
  default-language:    Haskell2010
  include-dirs:        openvr/headers
  c-sources:           src/Graphics/VR/OpenVR.cpp
  extra-libraries:     openvr_api
  ghc-options:         -Wall -O2
  ghc-prof-options:    -Wall -O2 -fprof-auto
  cc-options: -O2
  if os(windows)
    extra-libraries:   libstdc++-6
    extra-lib-dirs:    c:\msys64\usr\local\bin 
                       C:\msys64\usr\local\ghc\mingw\bin
    cc-options:        -fno-exceptions

executable vr-pal
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vr-pal
                     , gl-pal
                     , glfw-pal
                     , linear-extra
                     , lens-extra
                     , mtl
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vr-pal
